<resources>
    <string name="app_name">palettedemo</string>
    <string name="main_activity">Main Activity</string>
    <string name="containers">Containers</string>
    <string name="layouts">Layouts</string>
    <string name="legacy">Legacy</string>
    <string name="widgets">Widgets</string>
    <string name="containers_activity">Containers Activity</string>
    <string name="scroll_view">Scroll View</string>
    <string name="view_pager">View Pager</string>
    <string name="layouts_activity">Layouts Activity</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="legacy_activity">Legacy Activity</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="widgets_activity">Widgets Activity</string>
    <string name="image_view">Image View</string>
    <string name="search_view">SearchView</string>
    <string name="video_view">Video View</string>
    <string name="web_view">Web View</string>
    <string name="containers_scroll_view">Containers Scroll View</string>
    <string name="containers_view_pager">Containers View Pager</string>
    <string name="layouts_linear_layout">Layouts Linear Layout</string>
    <string name="layouts_table_layout">Layouts Table Layout</string>
    <string name="legacy_grid_view">Legacy Grid View</string>
    <string name="legacy_list_view">Legacy List View</string>
    <string name="legacy_relative_layout">Legacy Relative Layout</string>
    <string name="widgets_image_view">Widgets Image View</string>
    <string name="widgets_search_view">Widgets Search View</string>
    <string name="widgets_video_view">Widgets Video View</string>
    <string name="widgets_web_view">Widgets Web View</string>
</resources>